# ffmpeg-api-oat

./: .gitignore  CMakeLists.txt  README.md  install_database_dependencies.sh  setup_oatpp_project.sh
config/: config.json
schema/: config_schema.json
src/: ConfigManager.hpp  config.json  main.cpp
src/app/: AppComponent.hpp  PluginManager.cpp  PluginManager.hpp
src/controllers/: EncodingTemplateController.hpp  JobController.hpp
src/database/: ConnectionPool.cpp  ConnectionPool.hpp  DatabaseConnection.cpp  DatabaseConnection.hpp  QueryBuilder.cpp  QueryBuilder.hpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp
src/database/interfaces/: IDatabase.hpp  IRepository.hpp  ITransaction.hpp
src/database/mariadb/: MariaDBDatabase.cpp  MariaDBDatabase.hpp  MariaDBTransaction.hpp
src/database/postgresql/: PostgreSQLDatabase.cpp  PostgreSQLDatabase.hpp
src/database/sqlite/: SQLiteDatabase.cpp  SQLiteDatabase.hpp
src/dto/: AdvancedSettingsDTO.hpp  BitrateSettingsDTO.hpp  EncodingDTO.hpp  EncodingTemplateDTO.hpp  JobDto.hpp  SettingsDTO.hpp
src/dto2/: AdaptiveProfileDTO.hpp  AdaptiveStreamingDTO.hpp  CommonSettingsDTO.hpp  CredentialsDTO.hpp  DimensionsDTO.hpp  EncodingDTO.hpp  EncodingProfileDTO.hpp  EncodingTemplateDtO.hpp  EncryptionSettingsDTO.hpp  ErrorHandlingDTO.hpp  FilterChainDTO.hpp  FilterComplexDTO.hpp  InputDTO.hpp  InputOptionsDTO.hpp  LogStorageDTO.hpp  LoggingDTO.hpp  OutputDTO.hpp  OutputMappingDTO.hpp  PackageDTO.hpp  ServiceSettingsDTO.hpp  StorageDTO.hpp  StorageProviderDTO.hpp  ThumbnailGenerationDTO.hpp
src/encoding/: FFmpegEncodingService.cpp  FFmpegEncodingService.hpp  JobProcessor.cpp  JobProcessor.hpp
src/interfaces/: IDatabase.hpp  IEncodingService.hpp  IJobDatabase.hpp  IStorageProvider.hpp
src/managers/: EncodingTemplateManager.cpp  EncodingTemplateManager.hpp  JobManager.cpp  JobManager.hpp  PluginManager.cpp  PluginManager.hpp
src/metadata/: FFprobeMetadataProvider.cpp  FFprobeMetadataProvider.hpp  MediaInfoMetadataProvider.cpp  MediaInfoMetadataProvider.hpp  MediaMetadataProvider.hpp  MetadataMerger.cpp  MetadataMerger.hpp
src/middleware/: RateLimitInterceptor.hpp  RateLimiter.hpp
src/models/: Job.hpp  JobStatus.hpp
src/providers/: AWSS3Provider.cpp  AWSS3Provider.hpp
src/repositories/: EncodingTemplateRepository.cpp  EncodingTemplateRepository.hpp  JobRepository.cpp  JobRepository.hpp
src/utils/: ConfigManager.hpp  Logger.hpp
src/utils/logger/: FileLogSink.cpp  FileLogSink.hpp  LoggerMacros.hpp
src/validation/: ValidationUtils.cpp  ValidationUtils.hpp
src/validator/: JsonSchemaValidator.cpp  JsonSchemaValidator.hpp
src/workers/: FFMPEGWorker.hpp
templates/: template1.json
